# DeviceTrackingApplication

./: .env  Caddyfile  Dockerfile  README.md  TERMS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: 001_initial_schema.py  env.py
apps/tracker_agent/: __main__.py  commands.py  enroll.py  monitor.py  runner.py  service.py  storage.py
apps/tracker_server/: auth.py  db.py  ipgeo.py  main.py  tasks.py
apps/tracker_server/routers/: __init__.py  auth.py  commands.py  devices.py  enroll.py  reports.py  telemetry.py
apps/trackerctl/: __main__.py  config.py
apps/trackerctl/clients/: api_client.py
apps/trackerctl/commands/: alerts.py  auth.py  device.py  report.py
device_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
libs/core/: config.py  crypto.py  errors.py  logging.py  models.py  storage.py
tests/: test_commands.py  test_core_models.py  test_crypto.py  test_integration.py  test_monitor.py  test_storage.py
